--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -282,7 +282,7 @@ form {
 
 .message > footer > form {
   display: inline-block;
-  padding: 0;
+  margin: 0;
 }
 
 .message > footer > form > button {
