Remove meta-table from profiles

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -367,6 +367,7 @@ section > footer {
   display: flex;
   justify-content: space-between;
   margin-top: var(--whole);
+  color: var(--fg-status);
 }
 
 section > footer > * {
