Change to increase resolution of images

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -297,7 +297,7 @@ section header a {
 }
 
 nav > ul > li > a {
-  color: var(--fg-status);
+  color: var(--fg);
   text-decoration: none;
   font-weight: bold;
 }
