--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -59,19 +59,9 @@
 
 html {
   display: flex;
-  font-family:
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    "Roboto",
-    "Oxygen",
-    "Ubuntu",
-    "Cantarell",
-    "Fira Sans",
-    "Droid Sans",
-    "Helvetica Neue",
-    sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   justify-content: center;
   font-size: 12pt;
   line-height: 1.5;
@@ -85,12 +75,24 @@ main {
 }
 
 /* https://www.desmos.com/calculator/3elcf5cwhn */
-h1 { font-size: 133%; } /*     4 / 3 */
-h2 { font-size: 115%; } /*     8 / 7 */
-h3 { font-size: 105%; } /*   16 / 15 */
-h4 { font-size: 103%; } /*   32 / 31 */
-h5 { font-size: 101%; } /*   64 / 63 */
-h6 { font-size: 100%; } /* 128 / 127 */
+h1 {
+  font-size: 133%;
+} /*     4 / 3 */
+h2 {
+  font-size: 115%;
+} /*     8 / 7 */
+h3 {
+  font-size: 105%;
+} /*   16 / 15 */
+h4 {
+  font-size: 103%;
+} /*   32 / 31 */
+h5 {
+  font-size: 101%;
+} /*   64 / 63 */
+h6 {
+  font-size: 100%;
+} /* 128 / 127 */
 
 h1,
 h2,
