Solve inconsistent widths between pages
Problem: The `<section>` elements on some pages have different sizes,
which means that the sidebar is doing wonky stuff.

Solution: Make the sections all have a consistent width. Note that
there's still a few pixels of jank on the 'search' page, I'm not sure
why that's happening. The element inspector is reporting that everything
is the same width but that isn't true.

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -316,6 +316,8 @@ section {
   margin: var(--whole) 0;
   word-wrap: break-word;
   background: var(--bg);
+  width: 100%;
+  box-sizing: border-box;
 }
 
 section > header {
@@ -471,10 +473,12 @@ hr {
     margin-bottom: var(--whole);
   }
   main {
+    width: 100%;
     max-width: var(--measure);
   }
   body {
     display: flex;
     justify-content: center;
+    max-width: none;
   }
 }
