--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -315,6 +315,8 @@ section {
   margin: var(--whole) 0;
   word-wrap: break-word;
   background: var(--bg);
+  width: 100%;
+  box-sizing: border-box;
 }
 
 section > header {
@@ -470,10 +472,12 @@ hr {
     margin-bottom: var(--whole);
   }
   main {
+    width: 100%;
     max-width: var(--measure);
   }
   body {
     display: flex;
     justify-content: center;
+    max-width: none;
   }
 }
