Use capitalization for Oasis links and buttons
Problem: Using all-lowercase-everything isn't really a standard around
the web and it might be better to use consistent capitalization. This
was brought up in: https://github.com/fraction/oasis/issues/98

Solution: This changes the main navigation to use links with the first
letter capitalized, like how Patchwork + Twitter + Mastodon + etc do it.
This means that we're consistently using sentence case everywhere, which
I think is our best option. Originally I tried experimenting with
all-caps for actions, which I found aesthetically pleasing, but you have
to reduce the font size to make it look good (bad!) and I was reading
that all-caps text is harder for friends with dyslexia or vision
impairments.

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -46,6 +46,7 @@
   --common-radius: var(--micro);
   --measure: calc(var(--peta) + var(--mega));
   --line: 1.5rem;
+  --code-size: 85%;
 }
 
 * {
@@ -194,7 +195,7 @@ section code {
   overflow-wrap: break-word;
   padding: 0.125em 0.25em;
   margin: 0;
-  font-size: 85%;
+  font-size: var(--code-size);
   background-color: var(--bg);
   border-radius: var(--common-radius);
   border: var(--pico) solid var(--bg-status);
