Let navbar items wrap on narrow screen

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -392,13 +392,15 @@ label {
 
 nav > ul {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: flex-start;
   margin: 0;
   padding: 0;
 }
 
 nav > ul > li {
   list-style: none;
+  margin-right: var(--milli);
 }
 
 .profile {
