Fix nav alignment on smaller screens
Problem: The nav is aligned to the left of the screen on mobile, which
feels off-center and unbalanced on mobile. https://github.com/fraction/oasis/issues/135

Solution: Center the menu to optimize for space around the links.

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -393,7 +393,7 @@ label {
 nav > ul {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-around;
   margin: 0;
   padding: 0;
 }
