--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -321,11 +321,6 @@ section {
   box-sizing: border-box;
 }
 
-.viewInfo {
-  background: none;
-  white-space: pre-line; /* preserve newlines */
-}
-
 section > header {
   height: var(--line);
   display: flex;
@@ -398,7 +393,7 @@ label {
 nav > ul {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
   margin: 0;
   padding: 0;
 }
