Create 'Summaries' page for new summary view
Problem: Until we have a way to change the view of each page, it seems
to me that each of the views that we're experimenting with should be on
their own page rather than modifying the existing pages to add more
functionality. I'm also noticing that I can't process all of the
information that's on the screen when the new horizontal layout is used,
and I think we would benefit from using the previous layout
consistently.

Solution: Move the summary view to its own page so that we can continue
to iterate on it without modifying the popular view, which is already
complex, and revert the style changes to maintain consistency with the
rest of the linear design (threads go downward, indentation denotes
sub-threads, etc).

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -331,7 +331,6 @@ section {
   word-wrap: break-word;
   background: var(--bg);
   width: 100%;
-  max-width: var(--measure);
   box-sizing: border-box;
 }
 
@@ -397,32 +396,6 @@ section > footer > * {
 
 section > footer > form > button.liked {
   color: var(--red);
-}
-
-.post-aside-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-@media (min-width: 80rem) {
-  .post-aside-wrapper {
-    flex-direction: row;
-  }
-}
-
-.post-aside {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: flex-start;
-  padding-left: var(--micro);
-  margin: var(--whole) 0;
-}
-
-.post-aside section {
-  max-width: var(--peta);
-  margin: 0 0 var(--micro) 0;
 }
 
 label {
@@ -522,7 +495,8 @@ hr {
     margin-bottom: var(--whole);
   }
   main {
-    width: 85vw;
+    width: 100%;
+    max-width: var(--measure);
   }
   body {
     display: flex;
@@ -537,4 +511,12 @@ hr {
  */
 .emoji {
   font-family: initial;
+}
+
+/* This indent is used on the summaries page to create an indent of 1. It might
+ * be wise to nest these recursively on the thread view, which would make it so
+ * that we don't need any inline CSS anymore.
+ */
+.indent {
+  margin-left: 1rem;
 }
