Add profile edit page
Problem: An SSB client should allow you to declare your own name, but
Oasis didn't support that behavior at all.

Solution: Add a basic 'Edit Profile' page that lets you set your name
and description. This doesn't implement profile images because I had
limited time and didn't want to think about encoding formats, but it's
worth mentioning that I remember something about binary uploads with the
default form encoding actually send 3 times as much data because of
escapes or something? This might not effect us because we're on
localhost, but I want to make a note that this isn't implemented yet.

This also makes a small change regarding the `<label>` element --
previously we were writing them as siblings to the input and using the
`for` attribute to target the input, but while messing with the CSS I
tried putting them directly in the `label()` and it ends up having the
same effect with less code.

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -144,10 +144,11 @@ input {
   color: var(--fg);
   border: var(--pico) solid var(--bg-selection);
   padding: var(--milli);
-  margin-right: var(--whole);
+  margin: var(--whole) 0;
   -moz-appearance: none;
   appearance: none;
   border-radius: var(--common-radius);
+  display: block;
 }
 
 .contentWarning {
