Remove old way of indenting forks

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -522,6 +522,6 @@ hr {
 }
 
 .fork {
-  margin-left: var(--micro);
+  padding-left: var(--whole);
   border-left: var(--nano) solid var(--violet);
 }
