Don't make deep indented messages shrink

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -522,6 +522,7 @@ hr {
 }
 
 .fork {
-  padding-left: var(--whole);
+  padding-left: 1rem;
+  margin-right: -1rem;
   border-left: var(--nano) solid var(--violet);
 }
