--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -336,12 +336,15 @@ section {
 }
 
 section > header {
-  height: var(--line);
   background: var(--bg);
-  padding-bottom: 10px;
   color: var(--fg-status);
+  height: var(--line);
+  margin-bottom: -10px;
   margin-top: -10px;
+  padding-bottom: 10px;
   padding-top: 10px;
+  position: sticky;
+  top: 0;
 }
 
 section > header > div {
