Reduce indent border size
Problem: The indent borders take up lots of space and visual attention
when you're in highly-nested threads.

Solution: Reduce their size by half.

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -535,7 +535,7 @@ hr {
  */
 .indent {
   padding-left: 1rem;
-  border-left: var(--milli) solid var(--bg-selection);
+  border-left: var(--micro) solid var(--bg-selection);
 }
 
 .theme-preview {
