Use blockquote for text-based browser indent
Relates to #329 and #336. Text-based browsers recognize `<blockquote>`
and indent as expected. This helps render threads with indents in a
similar way as Oasis now does in the graphical browser.

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -534,8 +534,10 @@ hr {
  * that we don't need any inline CSS anymore.
  */
 .indent {
-  padding-left: 1rem;
+  padding-left: var(--whole);
   border-left: var(--micro) solid var(--bg-selection);
+  margin-right: 0;
+  margin-left: var(--whole);
 }
 
 .theme-preview {
