Remove dashed summary style from indented summary
Problem: The indented summary took up lots of visual attention which
isn't what we wanted. Also a bad merge broke the previous `<summary>`/

Solution: Fix the bad merge and remove the dashes style from the
indented summary elements.

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -445,7 +445,7 @@ progress {
 
 summary {
   padding: var(--size--1);
-  margin-top: var(--size-0) 0;
+  margin: var(--size-0) 0;
   cursor: pointer;
   background: var(--bg);
   border-radius: var(--common-radius);
@@ -455,6 +455,10 @@ summary {
 
 details[open] > summary {
   list-style-type: "− ";
+}
+
+.indent > details > summary {
+  border: none;
 }
 
 .md-mention {
