Hides content of messages from blocked people
This introduces a basic implementation to not display the content of
messages. It still shows that a message exists but shows localized
copy indicating why the content was hidden.

We should consider additional filters or queries in different views to actually
remove these posts but I'll leave that as up for discussion since I can see
value in showing that a blocked comment exists in a conversation.

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -667,6 +667,10 @@ section.post-preview > section > footer {
   display: none;
 }
 
+section.post.blocked {
+  font-style: italic;
+}
+
 section > footer > div > a:hover,
 section > footer > div > form > button:hover {
   text-decoration: underline;
